Fixed sidenav overflow

--- a/src/styles/components/fields.scss
+++ b/src/styles/components/fields.scss
@@ -39,7 +39,7 @@
   border: none;
 
   height: r(42px);
-  min-width: 160px;
+  min-width: r(160px);
 
   background-color: #FFFFFF;
   box-shadow: r(2px) r(2px) r(5px) rgba(0, 0, 0, 0.25);
