--- a/src/styles/components/side-nav.scss
+++ b/src/styles/components/side-nav.scss
@@ -8,7 +8,7 @@
   left: 0;
   bottom: 0;
 
-  margin-top: r($header-height);
+  padding-top: r($header-height);
 
   max-width: r($nav-width);
   width: 100%;
@@ -18,8 +18,6 @@
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.25);
 
   transition: max-width 0.5s;
-
-  overflow-y: auto;
 
   .main-container--opened & {
     max-width: r($nav-width--opened);
@@ -32,6 +30,9 @@
   &__menu {
     display: flex;
     flex-direction: column;
+
+    height: 100%;
+    overflow-y: auto;
   }
 }
 
@@ -39,8 +40,6 @@
   $gap: 16px;
 
   padding: r($gap) r(16px) r(16px) r(53px);
-
-  min-height: r(56px);
 
   display: flex;
   align-items: center;
